# IfcOpenShell-vcpkg

./: CMakeLists.txt  CMakePresets.json  IfcAdvancedHouse.cpp  IfcOpenHouse.cpp  IfcParseExamples.cpp  README.md
vcpkg_port/: Config.cmake.in  find-opencascade.patch  opencascade-debug-lib-postfix.patch  package-config-and-install.patch  portfile.cmake  remove-convert-executable.patch  usage  vcpkg.json
